--- a/HTML CSS/Introduction-to-HTML-Lab/L1_03_Simple-Website/Solution/index.html
+++ b/HTML CSS/Introduction-to-HTML-Lab/L1_03_Simple-Website/Solution/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
@@ -18,7 +19,8 @@
 </header>
 <main>
     <section>
-        <title>Articles</title>
+        <header><h3>Articles</h3>
+        </header>
         <article>
             <header>
                 <h1>Just Another Day</h1>
@@ -30,7 +32,7 @@
         </article>
         <article>
             <header>
-                <h1>My First Blog Entry</h1>
+                <h2>My First Blog Entry</h2>
                 <p>Written by Christina on January 10th</p>
             </header>
             <p>I'm so happy to write my first blog entry - yay! I published my first article about business blogging in
@@ -39,6 +41,9 @@
         </article>
     </section>
 </main>
+<footer>
+    <p>© Copyright 2009 Kr Knev</p>
+</footer>
 </body>
 
 </html>
