add 6th element
add

--- a/Ex_DOM and Events/elabmag_reverce/index.html
+++ b/Ex_DOM and Events/elabmag_reverce/index.html
@@ -36,11 +36,15 @@
     </section>
 
     <section class="controller ">
+
         <button class="bet_up ">Bet +</button>
         <button class="bet_low ">Bet -</button>
+
         <button class="lines_up ">Lines UP</button>
         <button class="lines_down ">Lines DOWN</button>
-        <button class="auto_play ">Auto Play</button>
+
+        <button class="auto_play" onclick="Autoplay();">Auto Play</button>
+
         <button class="Start" onclick="getImage();">Start</button>
         <script class="riles_play" src="rotateCell.js"></script>
     </section>
