--- a/Ex_DOM and Events/04. Fill-Dropdown/filldropdown.html
+++ b/Ex_DOM and Events/04. Fill-Dropdown/filldropdown.html
@@ -15,7 +15,8 @@ Submit your solutions in the SoftUni judge system at https://judge.softuni.bg/Co
     <h1>Dropdown Menu</h1>
     <article>
         <div>
-            <select id="menu"></select>
+            <select id="menu">
+            </select>
         </div>
         <label for="newItemText">
             Text:
