--- a/Ex_DOM and Events/06. Furniture/template.html
+++ b/Ex_DOM and Events/06. Furniture/template.html
@@ -31,11 +31,11 @@
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <img
-                                                src="https://www.lidl-shop.nl/media/fcf868f9526b38d0b0a43cc2ace72b80.jpeg">
+                                            <img src="https://www.lidl-shop.nl/media/fcf868f9526b38d0b0a43cc2ace72b80.jpeg">
                                         </td>
                                         <td>
                                             <p>Office chair</p>
+                                        </td>
                                         <td>
                                             <p>160</p>
                                         </td>
