--- a/Ex_DOM and Events/elabmag_reverce/index.html
+++ b/Ex_DOM and Events/elabmag_reverce/index.html
@@ -22,9 +22,11 @@
 
                         for (let index = 0; index < 5; index++) {
                             let cell = document.createElement('td');
+                            let iframes = document.createElement('iframes');
                             let img = document.createElement('img');
                             img.style = "width:150px;height:150px;"
-                            cell.appendChild(img);
+                            iframes.appendChild(img);
+                            cell.appendChild(iframes);
                             row.appendChild(cell);
                         }
                         document.querySelector('tbody').appendChild(row);
