--- a/EXAM_ prepare/JS Advanced Retake - 08 April 2020/EX_1/Skeleton/index.html
+++ b/EXAM_ prepare/JS Advanced Retake - 08 April 2020/EX_1/Skeleton/index.html
@@ -22,7 +22,7 @@
                     <h1 class="gray">Add Task</h1>
                 </div>
                 <div>
-                    <form action="">
+                    <form action="" onsubmit="return false;">
                         <label for="task">Task</label><br>
                         <input type="text" id="task" name="task" placeholder="JS Advanced Exam"><br>
                         <label for="description">Description</label><br>
