--- a/EXAM_ prepare/JS Advanced Exam - 15 July 2018/EX_4 Online Shop/index.html
+++ b/EXAM_ prepare/JS Advanced Exam - 15 July 2018/EX_4 Online Shop/index.html
@@ -131,7 +131,7 @@
 <body>
     <div class="wrapper">
     </div>
-    <script src="solution.js"></script>
+    <script src="solution2.js"></script>
     <script>
         onlineShop('.wrapper')
     </script>
